# configmanager

./: README.md  basic.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/configmanager/: __init__.py  configmanager.py  source.py
tests/: basic.yml  test_configmanager.py  test_parameter.py
